# serializer version: 1
# name: test_calandar[calendar.energy_site_buy_tariff-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.energy_site_buy_tariff',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Buy tariff',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tariff_content_v2',
    'unique_id': '123456-tariff_content_v2',
    'unit_of_measurement': None,
  })
# ---
# name: test_calandar[calendar.energy_site_buy_tariff-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Energy Site Buy tariff',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.energy_site_buy_tariff',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_calandar[calendar.energy_site_sell_tariff-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.energy_site_sell_tariff',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sell tariff',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tariff_content_v2_sell_tariff',
    'unique_id': '123456-tariff_content_v2_sell_tariff',
    'unit_of_measurement': None,
  })
# ---
# name: test_calandar[calendar.energy_site_sell_tariff-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Energy Site Sell tariff',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.energy_site_sell_tariff',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_calandar[calendar.test_charging_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.test_charging_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charging schedule',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_schedule_data_charge_schedules',
    'unique_id': 'LRW3F7EK4NC700000-charge_schedule_data_charge_schedules',
    'unit_of_measurement': None,
  })
# ---
# name: test_calandar[calendar.test_charging_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': False,
      'description': '-30.222626,-97.6236871',
      'end_time': '2024-01-01 16:00:00',
      'friendly_name': 'Test Charging schedule',
      'location': '-30.222626,-97.6236871',
      'message': 'Charge scheduled for Test',
      'start_time': '2024-01-01 09:00:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.test_charging_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_calandar[calendar.test_precondition_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.test_precondition_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Precondition schedule',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'preconditioning_schedule_data_precondition_schedules',
    'unique_id': 'LRW3F7EK4NC700000-preconditioning_schedule_data_precondition_schedules',
    'unit_of_measurement': None,
  })
# ---
# name: test_calandar[calendar.test_precondition_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': False,
      'description': '-30.222626,-97.6236871',
      'end_time': '2024-01-05 08:30:00',
      'friendly_name': 'Test Precondition schedule',
      'location': '-30.222626,-97.6236871',
      'message': 'Precondition scheduled for Test',
      'start_time': '2024-01-05 08:30:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.test_precondition_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_calandar_events[calendar.energy_site_buy_tariff]
  dict({
    'calendar.energy_site_buy_tariff': dict({
      'events': list([
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2023-12-31T21:00:00-08:00',
          'start': '2023-12-31T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-01T16:00:00-08:00',
          'start': '2023-12-31T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2024-01-01T21:00:00-08:00',
          'start': '2024-01-01T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-02T16:00:00-08:00',
          'start': '2024-01-01T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2024-01-02T21:00:00-08:00',
          'start': '2024-01-02T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-03T16:00:00-08:00',
          'start': '2024-01-02T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2024-01-03T21:00:00-08:00',
          'start': '2024-01-03T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-04T16:00:00-08:00',
          'start': '2024-01-03T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2024-01-04T21:00:00-08:00',
          'start': '2024-01-04T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-05T16:00:00-08:00',
          'start': '2024-01-04T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2024-01-05T21:00:00-08:00',
          'start': '2024-01-05T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-06T16:00:00-08:00',
          'start': '2024-01-05T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.22/kWh
          ''',
          'end': '2024-01-06T21:00:00-08:00',
          'start': '2024-01-06T16:00:00-08:00',
          'summary': '0.22/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.198/kWh
          ''',
          'end': '2024-01-07T16:00:00-08:00',
          'start': '2024-01-06T21:00:00-08:00',
          'summary': '0.198/kWh',
        }),
      ]),
    }),
  })
# ---
# name: test_calandar_events[calendar.energy_site_sell_tariff]
  dict({
    'calendar.energy_site_sell_tariff': dict({
      'events': list([
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2023-12-31T21:00:00-08:00',
          'start': '2023-12-31T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-01T16:00:00-08:00',
          'start': '2023-12-31T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2024-01-01T21:00:00-08:00',
          'start': '2024-01-01T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-02T16:00:00-08:00',
          'start': '2024-01-01T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2024-01-02T21:00:00-08:00',
          'start': '2024-01-02T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-03T16:00:00-08:00',
          'start': '2024-01-02T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2024-01-03T21:00:00-08:00',
          'start': '2024-01-03T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-04T16:00:00-08:00',
          'start': '2024-01-03T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2024-01-04T21:00:00-08:00',
          'start': '2024-01-04T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-05T16:00:00-08:00',
          'start': '2024-01-04T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2024-01-05T21:00:00-08:00',
          'start': '2024-01-05T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-06T16:00:00-08:00',
          'start': '2024-01-05T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: ON_PEAK
            Price: 0.16/kWh
          ''',
          'end': '2024-01-06T21:00:00-08:00',
          'start': '2024-01-06T16:00:00-08:00',
          'summary': '0.16/kWh',
        }),
        dict({
          'description': '''
            Seasons: Summer
            Period: OFF_PEAK
            Price: 0.08/kWh
          ''',
          'end': '2024-01-07T16:00:00-08:00',
          'start': '2024-01-06T21:00:00-08:00',
          'summary': '0.08/kWh',
        }),
      ]),
    }),
  })
# ---
# name: test_calandar_events[calendar.test_charging_schedule]
  dict({
    'calendar.test_charging_schedule': dict({
      'events': list([
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-01T16:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-01T09:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-02T06:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-02T06:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-02T16:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-02T09:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-03T06:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-03T06:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-03T16:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-03T09:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-04T06:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-03T22:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-04T16:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-04T09:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-05T06:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-04T22:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-05T16:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-05T09:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-06T06:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-05T22:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-06T16:00:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-06T09:00:00-08:00',
          'summary': 'Charge scheduled for Test',
        }),
      ]),
    }),
  })
# ---
# name: test_calandar_events[calendar.test_precondition_schedule]
  dict({
    'calendar.test_precondition_schedule': dict({
      'events': list([
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-05T08:30:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-05T08:30:00-08:00',
          'summary': 'Precondition scheduled for Test',
        }),
        dict({
          'description': '-30.222626,-97.6236871',
          'end': '2024-01-06T08:30:00-08:00',
          'location': '-30.222626,-97.6236871',
          'start': '2024-01-06T08:30:00-08:00',
          'summary': 'Precondition scheduled for Test',
        }),
      ]),
    }),
  })
# ---
